--- a/src/main/resources/templates/edit_user.html
+++ b/src/main/resources/templates/edit_user.html
@@ -5,16 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Preferanser</title>
     <link rel="icon" type="image/png" href="image/paw.png">
-<!--    <link rel="stylesheet" type="text/css" href="../stylesheet.css">-->
-<!--    <link rel="stylesheet" type="text/css" href="../indexHB.css">-->
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
 </head>
 <body>
-
-<style>
-    @import url("/stylesheet.css");
-    @import url("/indexHB.css");
-    @import url("/image/dogIcon.png");
-</style>
 
 <!-------- HEADER -------->
 <header>
@@ -54,8 +48,8 @@
             </select>
 
             <div class="optionType" id="animalOption">
-                <img id="DOG" src="image/dogIcon.png" alt="Hund" class="activeOption optionImg">
-                <img id="CAT" src="image/catIconGrey.png" alt="Katt" class="optionImg">
+                <img id="DOG" src="/image/dogIcon.png" alt="Hund" class="activeOption optionImg">
+                <img id="CAT" src="/image/catIconGrey.png" alt="Katt" class="optionImg">
             </div>
 
             <div class="optionType" id="homeType">
@@ -78,7 +72,7 @@
         </div>
         <input class="orangeButton" type="submit" value="Fortsett">
 
-        <script src="reg4_buyer.js"></script>
+        <script src="/reg4_buyer.js"></script>
     </form>
 </body>
 </html>
