--- a/src/main/resources/templates/reg2_userType.html
+++ b/src/main/resources/templates/reg2_userType.html
@@ -5,8 +5,8 @@
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
     <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 
@@ -18,16 +18,12 @@
 
 <header>
     <div class="headerNyBruker">
-        <p id="headerLoginTekst">Ny bruker</p>
+        <p id="headerLoginTekst">Hva ønsker du å gjøre?</p>
     </div>
 </header>
-
-
-
-
-    <div class="optionType">
-        <a  href="/kjoper"><p class="orangeButton">Kjøpe dyr</p></a>
-        <a href="/nyttdyr"><p class="orangeButton">Selge dyr</p></a>
+    <div class="preferanceOptions">
+        <a  href="/kjoper"><p class="continueButtons">Kjøpe dyr</p></a>
+        <a href="/nyttdyr"><p class="continueButtons">Selge dyr</p></a>
     </div>
 </body>
 
