--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -30,7 +30,7 @@
 
         <div id="textIconContainer">
             <p th:text="${eachAnimal.name + ' ' + eachAnimal.age + ' år'}">Kira</p>
-            <img class="heartAmount" src="image/redHeart.png" alt="">
+            <img class="heartAmount" src="/image/redHeart.png" alt="">
         </div>
     </div>
 </div>
