--- a/src/main/resources/templates/reg4_buyer.html
+++ b/src/main/resources/templates/reg4_buyer.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Preferanser</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="indexHB.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
     <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 <body>
@@ -20,7 +20,7 @@
 <a class="leftArrowAtag" href="/preferanser"><p id="arrowPtag">&#60;</p></a>
 
     <!-------- FORM NEW USER -------->
-    <form action="/kjoper" method="post" th:object="${buyer}">
+    <form action="/kjoper" method="post" th:object="${buyer}" id="buyerForm">
         <!-------- BUYER OPTIONS -------->
         <input type="hidden" id="animalTypeOption" th:field="*{animalType}">
         <input type="hidden" id="homeTypeOption" th:field="*{homeType}">
@@ -29,29 +29,47 @@
 
         <div id="buyerOptions" class="showOptions">
             <div class="optionType" id="animalOption">
-                <img id="DOG" src="image/dogIcon.png" alt="Hund" class="activeOption optionImg">
-                <img id="CAT" src="image/catIconGrey.png" alt="Katt" class="optionImg">
+                <p class="optionItem">Hvordan dyr er du på utkikk etter?</p>
+                <div class="imageDiv">
+                    <img id="DOG" src="image/dogIcon.png" alt="Hund" class="activeOption optionImg">
+                    <img id="CAT" src="image/catIconGrey.png" alt="Katt" class="optionImg">
+                </div>
+            </div>
+
+            <div>
+                <textarea type="text" th:field="*{bio}" placeholder="Skriv litt om deg selv"></textarea>
+            </div>
+
+            <div>
+                <select name="municipality">
+                    <label>Hvor bor du?</label>
+                    <option value="" selected disabled hidden>Velg fylke</option>
+                    <option th:each="municipality : ${T(com.example.demo.Municipality).values()}"
+                            th:value="${municipality}"
+                            th:text="${municipality}">
+                    </option>
+                </select>
             </div>
 
             <div class="optionType" id="homeType">
-                <p>Bopel</p>
-                <p id="APARTMENT" class="activeOption">Leilighet</p>
-                <p id="HOUSE" class="option">Hus</p>
+                <p class="optionItem">Bopel:</p>
+                <p id="APARTMENT" class="activeOption optionItem">Leilighet</p>
+                <p id="HOUSE" class="option optionItem">Hus</p>
             </div>
 
             <div class="optionType">
-                <p>Hatt dyr tidligere</p>
-                <p id="yesPrevious" class="activeOption">Ja</p>
-                <p id="noPrevious" class="option">Nei</p>
+                <p class="optionItem">Hatt dyr tidligere:</p>
+                <p id="yesPrevious" class="activeOption optionItem">Ja</p>
+                <p id="noPrevious" class="option optionItem">Nei</p>
             </div>
 
             <div class="optionType">
-                <p>Barn i husstanden</p>
-                <p id="yesChildren" class="activeOption">Ja</p>
-                <p id="noChildren" class="option">Nei</p>
+                <p class="optionItem">Barn i husstanden:</p>
+                <p id="yesChildren" class="activeOption optionItem">Ja</p>
+                <p id="noChildren" class="option optionItem">Nei</p>
             </div>
         </div>
-        <input class="orangeButton" type="submit" value="Fortsett">
+        <input class="continueButtons" type="submit" value="Fortsett">
 
         <script src="reg4_buyer.js"></script>
     </form>
