--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -23,18 +23,17 @@
 
 <div class="containerIntro">
 
-    <div class="arrow">
+<!--    <div class="arrow">
         <p>&#8826</p>
-    </div>
+    </div>-->
 
     <div class="boxIntro">
         <img id="introimg" src="image/intropic1.jpg" alt="Introbilde 1">
-
     </div>
 
-    <div class="arrow">
+ <!--   <div class="arrow">
         <p>&#8827</p>
-    </div>
+    </div>-->
 
 </div>
 <div class="introTekst">
