--- a/src/main/resources/templates/animalProfile.html
+++ b/src/main/resources/templates/animalProfile.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UFT-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="../indexHB.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/indexHB.css">
 
     <title>Pet Match | Profil</title>
 </head>
@@ -41,7 +41,7 @@
 
 
     <div class="locationBopelContainer">
-        <img class="prefIcons" src="../image/lokasjon.png" alt="Lokasjon">
+        <img class="prefIcons" src="/image/lokasjon.png" alt="Lokasjon">
         <p th:text="${theAnimalUser.municipality}">Oslo</p>
     </div>
 
@@ -49,12 +49,12 @@
         <h4 class="prefH4">Preferanser</h4>
 
         <div class="iconContainer">
-            <img th:if="${animal.getFemale()}" class="prefIcons" src="../image/female.png" alt="">
-            <img th:unless="${animal.getFemale()}" class="prefIcons" src="../image/male.png" alt="">
-            <img th:if="${animal.getIsChildFriendly()}" class="prefIcons" src="../image/kid.png" alt="">
-            <img th:if="${animal.getIsChipped()}" class="prefIcons" src="../image/chip.png" alt="">
-            <img th:if="${animal.getIsVaccinated()}" class="prefIcons" src="../image/vaksine.png" alt="">
-            <img th:if="${animal.getIsSterilized()}" class="prefIcons" src="../image/scissor.png" alt="">
+            <img th:if="${animal.getFemale()}" class="prefIcons" src="/image/female.png" alt="">
+            <img th:unless="${animal.getFemale()}" class="prefIcons" src="/image/male.png" alt="">
+            <img th:if="${animal.getIsChildFriendly()}" class="prefIcons" src="/image/kid.png" alt="">
+            <img th:if="${animal.getIsChipped()}" class="prefIcons" src="/image/chip.png" alt="">
+            <img th:if="${animal.getIsVaccinated()}" class="prefIcons" src="/image/vaksine.png" alt="">
+            <img th:if="${animal.getIsSterilized()}" class="prefIcons" src="/image/scissor.png" alt="">
         </div>
     </div>
 </div>
