--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pet Match | Logg inn</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
     <title>Logg inn</title>
-    <link rel="icon" type="image/png" href="image/paw.png">
 </head>
 
 <body>
