--- a/src/main/resources/templates/animalProfile.html
+++ b/src/main/resources/templates/animalProfile.html
@@ -41,25 +41,32 @@
 
 
     <div class="locationBopelContainer">
-        <img class="prefIcons" src="/image/lokasjon.png" alt="Lokasjon">
-        <p th:text="${theAnimalUser.municipality}">Oslo</p>
-    </div>
+        <div class="userIconTextBox">
+            <img class="prefIcons" src="/image/lokasjon.png" alt="Lokasjon">
+            <p th:text="${theAnimalUser.municipality}">Oslo</p>
+        </div>
 
-    <div>
-        <h4 class="prefH4">Preferanser</h4>
+        <div class="userIconTextBox">
+            <img class="prefIcons" src="/image/bopel.png" alt="Bopel">
+            <p th:if="${theAnimalUser.homeType == T(com.example.demo.HomeType).HOUSE}" th:text="Hus">Hus</p>
+            <p th:if="${theAnimalUser.homeType == T(com.example.demo.HomeType).APARTMENT}" th:text="Leilighet">Leilighet</p>
+        </div>
 
-        <div class="iconContainer">
-            <img th:if="${animal.getFemale()}" class="prefIcons" src="/image/female.png" alt="">
-            <img th:unless="${animal.getFemale()}" class="prefIcons" src="/image/male.png" alt="">
-            <img th:if="${animal.getIsChildFriendly()}" class="prefIcons" src="/image/kid.png" alt="">
-            <img th:if="${animal.getIsChipped()}" class="prefIcons" src="/image/chip.png" alt="">
-            <img th:if="${animal.getIsVaccinated()}" class="prefIcons" src="/image/vaksine.png" alt="">
-            <img th:if="${animal.getIsSterilized()}" class="prefIcons" src="/image/scissor.png" alt="">
+        <div>
+            <h4 class="prefH4">Preferanser</h4>
+
+            <div class="iconContainer">
+                <img th:if="${animal.getFemale()}" class="prefIcons" src="/image/female.png" alt="">
+                <img th:unless="${animal.getFemale()}" class="prefIcons" src="/image/male.png" alt="">
+                <img th:if="${animal.getIsChildFriendly()}" class="prefIcons" src="/image/kid.png" alt="">
+                <img th:if="${animal.getIsChipped()}" class="prefIcons" src="/image/chip.png" alt="">
+                <img th:if="${animal.getIsVaccinated()}" class="prefIcons" src="/image/vaksine.png" alt="">
+                <img th:if="${animal.getIsSterilized()}" class="prefIcons" src="/image/scissor.png" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<div class="menu" th:include="templates :: menu"></div>
+    <div class="menu" th:include="templates :: menu"></div>
 
 </body>
 </html>
