--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -84,9 +84,9 @@
             <img class="buyerIconLocation" src="/image/lokasjon.png" alt="">
             <p class="iconTextLoc" th:text="${user.municipality}"></p>
             <img class="buyerIconBopel" src="/image/bopel.png" alt="">
-            <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).HOUSE}" th:text="Hus">Hus</p>
+          <!--  <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).HOUSE}" th:text="Hus">Hus</p>
             <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).APARTMENT}" th:text="Leilighet">Leilighet</p>
-
+-->
         </div>
         <hr class="userProfileLine">
     </div>
