--- a/src/main/resources/templates/animalProfile.html
+++ b/src/main/resources/templates/animalProfile.html
@@ -13,6 +13,10 @@
 <div id="animalGalleryDiv">
     <a class="leftArrowAtagWhite" th:href="'/buyerAllAnimalsView'"><p id="arrowPtag">&#60;</p></a>
     <img id="animalProfileGallery" th:src="${animal.getAnimalImg1()}" alt="">
+    <a class="editCamera" th:if="${animal}" th:href="'/userProfile/' + ${animal.id}+ '/bilde'">
+        <img class="editIcon" src="/image/camera.png" alt="Edit">
+    <p class="editCameraText">Oppdater</p>
+    </a>
 </div>
 
 <div id="redHeartDiv">
@@ -46,11 +50,11 @@
             <p th:text="${theAnimalUser.municipality}">Oslo</p>
         </div>
 
-        <div class="userIconTextBox">
+        <!--<div class="userIconTextBox">
             <img class="prefIcons" src="/image/bopel.png" alt="Bopel">
             <p th:if="${theAnimalUser.homeType == T(com.example.demo.HomeType).HOUSE}" th:text="Hus">Hus</p>
             <p th:if="${theAnimalUser.homeType == T(com.example.demo.HomeType).APARTMENT}" th:text="Leilighet">Leilighet</p>
-        </div>
+        </div>-->
 
         <div>
             <h4 class="prefH4">Preferanser</h4>
