--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -16,7 +16,7 @@
     <a class="leftArrowAtagWhite" th:href="'/sellersAnimalsView'"><p id="arrowPtag">&#60;</p></a>
     <img id="animalProfileGallerySeller" th:src="${animal.getAnimalImg1()}" alt="">
 
-    <a class="editCameraAnimal" th:if="${user}" th:href="'/animalProfile/' + ${user.id}+ '/bilde'">
+    <a class="editCameraAnimal" th:if="${user}" th:href="'/animalProfile/' + ${animal.id}+ '/bilde'">
         <img class="editIcon" src="/image/camera.png" alt="Edit">
         <p class="editCameraText">Oppdater</p>
     </a>
