Added button for addding animal in sellers animalview. button not working yet

--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -38,5 +38,11 @@
 <!-------- MENU -------->
 <div class="menu" th:include="templates :: menu"></div>
 
+<div>
+    <input class="continueButtons" type="submit" value="Legg til et nytt dyr">
+
+</div>
+
+
 </body>
 </html>
