--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -122,6 +122,7 @@ a, a:link:active, a:visited:active {
 .iconContainer {
     display: flex;
     flex-wrap: wrap;
+
 }
 
 /*-------- LOGIN STYLING ---------*/
@@ -213,13 +214,15 @@ a, a:link:active, a:visited:active {
 
 .iconContainer {
     display: flex;
+    margin-bottom: 25px;
 }
 
 .locationBopelContainer {
     display: flex;
     flex-direction: column;
-    margin-bottom: 70px;
 }
+
+
 .userIconTextBox {
     display: inherit;
 }
@@ -460,11 +463,21 @@ a, a:link:active, a:visited:active {
     padding-left: 10px;
 }
 
+.locationBopelContainerSeller {
+    display: flex;
+}
+
+.textSeller {
+    font-size: 12px;
+    margin-left: 15px;
+}
+
 /*SellersViewOverAllAnimals*/
 .animalsViewContainer {
     display: flex;
     flex-wrap: wrap;
     width: 375px;
+    margin-bottom: 60px;
 }
 
 #sellerViewAnimalPic {
