--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -43,18 +43,16 @@
 <!-------- LOGIN/SIGNUP -------->
 
 <div class="containerLoginSignup">
-    <div class="Login">
-        <a class="loginSignupButtonAtag" href="/login">Logg inn</a>
+    <div class="orangeButton">
+        <a  href="/login">Logg inn</a>
     </div>
 
-    <div class="NyBruker">
-        <a class="loginSignupButtonAtag" href="/registrer">Ny bruker</a>
+    <div class="orangeButton">
+        <a  href="/registrer">Ny bruker</a>
     </div>
-
 </div>
 
 <div class="containerFaqAbout">
-
    <button class="faqAboutButtonAtag" onclick="faq()">FAQ
    </button>
 
