--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -83,16 +83,15 @@
 
             <div id="heartOutlinedBlackDiv" th:unless="${approvedUsers.contains(user)}">
                 <a th:href="'/approve/' + ${animal.id} + '/' + ${user.id}">
-                    <img class="heartIconWhite" src="/image/whiteHeart.png" alt="">
+                    <img class="heartIconWhite" src="/image/heartOutlinedWhite.png" alt="">
                 </a>
             </div>
 
             <img class="buyerIconLocation" src="/image/lokasjon.png" alt="">
             <p class="iconTextLoc" th:text="${user.municipality}"></p>
             <img class="buyerIconBopel" src="/image/bopel.png" alt="">
-          <!--  <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).HOUSE}" th:text="Hus">Hus</p>
-            <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).APARTMENT}" th:text="Leilighet">Leilighet</p>
--->
+           <!-- <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).HOUSE}" th:text="Hus">Hus</p>
+            <p class="iconTextBo" th:if="${user.homeType == T(com.example.demo.HomeType).APARTMENT}" th:text="Leilighet">Leilighet</p>-->
         </div>
         <hr class="userProfileLine">
     </div>
