--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -10,20 +10,20 @@
 <body>
 
 <div th:fragment="menu" class="menu">
-    <a>
-        <img class="menuImage1" src="/image/paw.png" alt="Back to home">
-    </a>
-
     <a th:if="${user.getUserType() == T(com.example.demo.UserType).BUYER}" th:href="'/buyerAllAnimalsView'">
-        <img class="menuImage3" src="/image/hjerte.png" alt="Your matches">
+        <img class="menuImage1" src="/image/pawMeny.png" alt="Back to home" >
     </a>
-
     <a th:if="${user.getUserType() == T(com.example.demo.UserType).SELLER}" th:href="'/sellersAnimalsView'">
-        <img class="menuImage2" src="/image/animalFace.png" alt="Your animals">
+        <img class="menuImage1" src="/image/pawMeny.png" alt="Back to home" >
     </a>
-
+    <a th:if="${user.getUserType() == T(com.example.demo.UserType).BUYER}" th:href="'/buyerMatches'">
+        <img class="menuImage" src="/image/heartMeny.png" alt="Your matches">
+    </a>
+    <a th:if="${user.getUserType() == T(com.example.demo.UserType).SELLER}" th:href="'/sellersAnimalsView'">
+        <img class="menuImage" src="/image/animalFaceMeny.png" alt="Your animals">
+    </a>
     <a th:href="'/userProfile/' + ${user.id}">
-        <img class="menuImage4" src="/image/person.png" alt="Your animals">
+        <img class="menuImage" src="/image/personMeny.png" alt="Your animals">
     </a>
 </div>
 
