--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -43,12 +43,12 @@
 <!-------- LOGIN/SIGNUP -------->
 
 <div class="containerLoginSignup">
-    <div class="orangeButton">
-        <a  href="/login">Logg inn</a>
+    <div class="orangeButtonLog">
+        <a class="textLogNy" href="/login">Logg inn</a>
     </div>
 
-    <div class="orangeButton">
-        <a  href="/registrer">Ny bruker</a>
+    <div class="orangeButtonLog">
+        <a class="textLogNy" href="/registrer">Ny bruker</a>
     </div>
 </div>
 
